<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Battly Launcher</string>
    <string name="app_full_name" translatable="false">Battly Launcher Mobile</string>
    <string name="app_name_pri" translatable="false">Battly Launcher</string>
    <string name="app_name_sec" translatable="false">El Launcher de Minecraft definitivo</string>
    <string name="version_name" translatable="false">v1.0.0</string>
    <string name="app_bar_title" translatable="false">Battly Launcher 1.0.0 (MOBILE)</string>
    <string name="dialog_outdated_warning_title">Warning</string>
    <string name="dialog_outdated_warning_msg">Battly is a Minecraft launcher for premium and non-premium users to play Minecraft completely free. We show ads to keep the Launcher on both Android and PC. We take care of any damage Battly may do to your device.</string>
    <string name="dialog_outdated_warning_hide">Don\'t show again</string>
    <string name="dialog_outdated_warning_positive">Got it</string>
    <string name="launcher_spinner_text" translatable="false">▲</string>
    <string name="dialog_add_offline_account_uuid" translatable="false">UUID</string>
    <string name="default_game_file_directory_list_pri_path" translatable="false">/storage/emulated/0/BATTLY/.minecraft</string>
    <string name="default_game_file_directory_list_sec_path" translatable="false">/storage/emulated/0/Android/data/com.tecnobros.battlylauncher/files/.minecraft</string>
    <string name="export_package_type_ui_multimc" translatable="false">MultiMC</string>
    <string name="install_game_ui_minecraft" translatable="false">Minecraft</string>
    <string name="install_game_ui_forge" translatable="false">Forge</string>
    <string name="install_game_ui_liteloader" translatable="false">LiteLoader</string>
    <string name="install_game_ui_optifine" translatable="false">OptiFine</string>
    <string name="install_game_ui_fabric" translatable="false">Fabric</string>
    <string name="install_game_ui_fabric_api" translatable="false">Fabric API</string>
    <string name="install_game_ui_quilt" translatable="false">Quilt</string>
    <string name="install_game_ui_quilt_api" translatable="false">Quilt API</string>
    <string name="download_mod_source_curse_forge" translatable="false">CurseForge</string>
    <string name="download_mod_source_modrinth" translatable="false">Modrinth</string>
    <string name="download_resource_mcbbs" translatable="false">MCBBS</string>
    <string name="download_resource_curse_forge" translatable="false">CurseForge</string>
    <string name="download_resource_modrinth" translatable="false">Modrinth</string>
    <string name="game_setting_ui_ram" translatable="false">MB</string>
    <string name="game_setting_ui_game_launcher_boat" translatable="false">Boat</string>
    <string name="game_setting_ui_game_launcher_pojav" translatable="false">Legacy</string>
    <string name="game_setting_ui_boat_renderer_gl4es_114" translatable="false">Holy GL4ES (OpenGL 2.1/3.2)</string>
    <string name="game_setting_ui_boat_renderer_virgl" translatable="false">VirGLRenderer (OpenGL 4.3)</string>
    <string name="game_setting_ui_pojav_renderer_gl4es_114" translatable="false">Holy GL4ES (OpenGL 2.1/3.2)</string>
    <string name="game_setting_ui_pojav_renderer_virgl" translatable="false">VirGLRenderer (OpenGL 4.3)</string>
    <string name="dialog_color_selector_arrow" translatable="false">→</string>
    <string name="download_setting_ui_source_bmclapi" translatable="false">BMCLAPI（bangbang93，https://bmclapi2.bangbang93.com/）</string>
    <string name="ui_about_hmclpe_main" translatable="false">Battly Launcher Mobile</string>
    <string name="ui_about_hmclpe_sub" translatable="false">1.0.0</string>
    <string name="ui_about_tungsten_main" translatable="false">TECNO BROS</string>
    <string name="ui_about_tungsten_sub" translatable="false">B 站 ID：@念小六</string>
    <string name="ui_about_shirosakimio_main" translatable="false">ShirosakiMio</string>
    <string name="ui_about_shirosakimio_sub" translatable="false">B 站 ID：@ShirosakiMio</string>
    <string name="ui_about_cosine_main" translatable="false">CosineMath</string>
    <string name="ui_about_tsaltedfishking_main" translatable="false">TSaltedfishKing</string>
    <string name="ui_about_bangbang93_main" translatable="false">bangbang93</string>
    <string name="storage_permissions_remind">Please grant read and write permissions to the launcher, otherwise it may not operate normally</string>
    <string name="dialog_unknown_error_title">Warning</string>
    <string name="dialog_unknown_error_positive">Confirm</string>
    <string name="dialog_verify_title">Development version test permission verification</string>
    <string name="dialog_verify_msg">Your device code is:\n%s\nPlease fill in the authorization verification code that matches this device code.</string>
    <string name="dialog_verify_code">Authorization verification code</string>
    <string name="dialog_verify_donate">Get permission</string>
    <string name="dialog_verify_copy">Copy device code</string>
    <string name="dialog_verify_copy_success">Copy successfully</string>
    <string name="dialog_verify_verify">Verify</string>
    <string name="dialog_verify_verify_success">Verification succeeded</string>
    <string name="dialog_verify_verify_fail">Verification failed</string>
    <string name="dialog_verify_cancel">Cancel</string>
    <string name="dialog_obtain_permission_title">Information</string>
    <string name="dialog_obtain_permission_msg">You need to sponsor $2 to get this permission.</string>
    <string name="dialog_obtain_permission_positive">Go to sponsor</string>
    <string name="dialog_obtain_permission_negative">Cancel</string>
    <string name="import_control_label">Import control pattern</string>
    <string name="loading_title">Welcome</string>
    <string name="loading_hint">Loading…</string>
    <string name="loading_hint_setting">Checking config file…</string>
    <string name="loading_hint_plugin">Checking launcher plugins…</string>
    <string name="loading_hint_control">Checking launcher control pattern…</string>
    <string name="loading_hint_lib">Checking local game libs…</string>
    <string name="loading_hint_java_8">Checking Java 8…</string>
    <string name="loading_hint_java_17">Checking Java 17…</string>
    <string name="loading_hint_ready">Ready, about to enter the launcher…</string>
    <string name="loading_hint_failed">Core file install/update failed, please check your network, if invalid, please contact the developer</string>
    <string name="launcher_scroll_text_account">ACCOUNTS</string>
    <string name="launcher_scroll_account_name">No Accounts</string>
    <string name="launcher_scroll_account_state">Click here to add one</string>
    <string name="launcher_scroll_text_game">GAMES</string>
    <string name="launcher_scroll_game_manager">No Instances</string>
    <string name="launcher_scroll_game_none">Add an Instance</string>
    <string name="launcher_scroll_version_list">All Instances</string>
    <string name="launcher_scroll_download">Download</string>
    <string name="launcher_scroll_text_universal">GENERAL</string>
    <string name="launcher_scroll_multi_player">Multiplayer</string>
    <string name="launcher_scroll_setting">Settings</string>
    <string name="launcher_button_launch">Launch Game</string>
    <string name="launcher_button_current_version">No Instances</string>
    <string name="launch_check_dialog_title">Launch Game</string>
    <string name="launch_check_dialog_java">Checking Java version</string>
    <string name="launch_check_dialog_lib">Resolving dependencies</string>
    <string name="launch_check_dialog_login">Logging in</string>
    <string name="launch_check_dialog_launch">Waiting for the game to launch</string>
    <string name="launch_check_dialog_cancel">Cancel</string>
    <string name="launch_check_dialog_exception_error_java">Wrong Java version</string>
    <string name="launch_check_dialog_exception_assets_failed">The resource file download failed, please check the network and reinstall the version</string>
    <string name="launch_check_dialog_exception_lib_failed">The current version is missing necessary files, please check the network and reinstall the version</string>
    <string name="launch_check_dialog_exception_no_account">Please add an account first</string>
    <string name="launch_check_dialog_exception_no_game">There is no launchable game, you can install the game by clicking the download button in the left sidebar</string>
    <string name="launch_failed_dialog_title">Launch failed</string>
    <string name="launch_failed_dialog_positive">Confirm</string>
    <string name="account_ui_title">Account List</string>
    <string name="account_scroll_add_account">Add an account</string>
    <string name="account_offline_login">Offline</string>
    <string name="account_mojang_login">Mojang</string>
    <string name="account_microsoft_login">Microsoft Account</string>
    <string name="account_external_login">Add an Authentication Server</string>
    <string name="account_external_login_hint">External login</string>
    <string name="account_refresh_exception_network">Refresh failed, please check the network</string>
    <string name="account_server_type">Select the authentication server type</string>
    <string name="account_auth_lib_injector">authlib-injector</string>
    <string name="account_nide_8_auth">nide8auth</string>
    <string name="dialog_add_account_title">Add an account</string>
    <string name="dialog_add_account_type_offline">Offline</string>
    <string name="dialog_add_account_type_microsoft">Microsoft Account</string>
    <string name="dialog_add_account_type_external">External Account</string>
    <string name="dialog_add_account_login">Login</string>
    <string name="dialog_add_account_cancel">Cancel</string>
    <string name="dialog_add_offline_account_title">Add an offline account</string>
    <string name="dialog_add_offline_account_name">Username</string>
    <string name="dialog_add_offline_account_purchase"><a href="https://www.minecraft.net/zh-hans/store/minecraft-java-edition">Buy Minecraft</a></string>
    <string name="dialog_add_offline_account_advance">Advanced Settings</string>
    <string name="dialog_add_offline_account_hint">Warning</string>
    <string name="dialog_add_offline_account_hint_text">UUID is the unique identifier for the game character in Minecraft. The way that it is generated might vary between different game launchers. Changing it to the one generated by other launchers allows you to keep your items in your offline account inventory.\n\nThis option is for advanced users only. We do not recommend modifying this option unless you know what you are doing.</string>
    <string name="dialog_add_offline_account_login">Login</string>
    <string name="dialog_add_offline_account_cancel">Cancel</string>
    <string name="dialog_add_offline_account_empty_warn">Username cannot be empty</string>
    <string name="dialog_add_offline_account_exist_warn">The current user already exists and cannot be added repeatedly</string>
    <string name="dialog_add_mojang_account_title">Add a Mojang account</string>
    <string name="dialog_add_mojang_account_login">Login</string>
    <string name="dialog_add_mojang_account_cancel">Cancel</string>
    <string name="dialog_add_mojang_account_empty_warn">Username or password cannot be empty</string>
    <string name="feedback_ui_join_discord">Join Discord</string>
    <string name="feedback_ui_github_issues">Go to Github</string>
    <string name="donate_ui_text">Battly Launcher El Launcher de Minecraft definitivo is an Android Minecraft launcher which allows users to manage multiple Minecraft instances easily. You can donate to us on Afdian to support our file hosting and project development. Click here for more information.</string>
</resources>