<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="10dp"
    android:layout_width="500dp"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/colorPureBlack"
        android:textSize="@dimen/text_size_big"
        android:text="@string/dialog_add_offline_account_title"/>

    <ScrollView
        android:layout_marginTop="15dp"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dialog_add_offline_account_name"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="@dimen/text_size_middle" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/edit_user_name"
                    android:layout_width="390dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:background="@color/colorLightGray"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_middle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:translationY="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dialog_add_offline_account_name"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="@dimen/text_size_middle"
                    android:translationY="-5dp" />

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1" />

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="390dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:background="@color/colorLightGray"
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:singleLine="true"
                    android:textSize="@dimen/text_size_middle" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:orientation="horizontal"
                android:visibility="gone">

                <ImageView
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:background="@drawable/ic_baseline_jump_black" />

                <TextView
                    android:id="@+id/purchase_link"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="7dp"
                    android:singleLine="true"
                    android:text="@string/dialog_add_offline_account_purchase"
                    android:textColorLink="@color/colorLinkBlue"
                    android:textSize="@dimen/text_size_middle" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/show_advance_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:background="@drawable/launcher_button_parent"
                android:clickable="true"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginStart="5dp"
                    android:text="@string/dialog_add_offline_account_advance"
                    android:textColor="@color/colorPureBlack"
                    android:textSize="15sp" />

                <ImageView
                    android:id="@+id/spin_view"
                    android:layout_width="20dp"
                    android:layout_height="20dp"
                    android:layout_gravity="center"
                    android:layout_marginStart="8dp"
                    android:background="@drawable/ic_baseline_arrow_drop_down_black" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/edit_uuid_layout"
                android:visibility="gone"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/dialog_add_offline_account_uuid"
                    android:textSize="@dimen/text_size_middle"
                    android:textColor="@color/colorPureBlack"/>

                <View
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:layout_weight="1"/>

                <EditText
                    android:paddingStart="8dp"
                    android:paddingEnd="8dp"
                    android:hint="fc5bc365-aedf-30a8-8b89-04e462e29bde"
                    android:textSize="@dimen/text_size_middle"
                    android:background="@color/colorLightGray"
                    android:singleLine="true"
                    android:layout_width="390dp"
                    android:layout_height="36dp"
                    android:layout_gravity="center"
                    android:id="@+id/edit_uuid" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/hint_layout"
                android:visibility="gone"
                android:padding="10dp"
                android:background="@drawable/launcher_view_yellow"
                android:layout_marginTop="20dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:background="@drawable/ic_outline_alert_black"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:text="@string/dialog_add_offline_account_hint"
                        android:textSize="@dimen/text_size_middle"
                        android:textColor="@color/colorBrown"/>

                </LinearLayout>

                <TextView
                    android:layout_marginTop="5dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_add_offline_account_hint_text"
                    android:textSize="@dimen/text_size_middle"
                    android:textColor="@color/colorBrown"/>

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

    <LinearLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>

        <Button
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_add_offline_account_login"
            android:textSize="15sp"
            android:textColor="@color/colorLinkBlue"
            android:background="@drawable/launcher_button_parent"
            android:id="@+id/login_offline"/>

        <Button
            android:singleLine="true"
            android:textAllCaps="false"
            android:layout_width="60dp"
            android:layout_height="40dp"
            android:gravity="center"
            android:text="@string/dialog_add_offline_account_cancel"
            android:textSize="15sp"
            android:textColor="@color/colorPureBlack"
            android:background="@drawable/launcher_button_parent"
            android:id="@+id/cancel_login_offline"/>

    </LinearLayout>

</LinearLayout>