<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:id="@+id/ui_donate"
    android:visibility="gone"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/donate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/launcher_view_light_gray"
        android:clickable="true"
        android:focusable="true"
        android:padding="10dp"
        android:text="@string/donate_ui_text"
        android:textColor="@color/colorPureBlack"
        android:textSize="@dimen/text_size_middle" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/launcher_view_light_gray"
            android:orientation="horizontal"
            android:padding="15dp"
            android:translationY="-5dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/feedback_ui_github_issues"
                android:textColor="@color/colorPureBlack"
                android:textSize="@dimen/text_size_middle" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/jump_to_git_issues"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_jump_black" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/launcher_view_light_gray"
            android:orientation="horizontal"
            android:padding="15dp"
            android:translationY="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:singleLine="true"
                android:text="@string/feedback_ui_join_discord"
                android:textColor="@color/colorPureBlack"
                android:textSize="@dimen/text_size_middle" />

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <ImageButton
                android:id="@+id/join_discord"
                android:layout_width="24dp"
                android:layout_height="24dp"
                android:layout_gravity="center"
                android:background="@drawable/ic_baseline_jump_black" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>