<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/background"
    android:background="@drawable/ic_background">

    <TextView
        android:id="@+id/title_text_second"
        android:layout_width="626dp"
        android:layout_height="99dp"
        android:autoSizeMaxTextSize="80sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppinsextrabold"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/app_name_pri"
        android:textColor="#FFFFFF"
        android:textSize="80sp"
        android:textStyle="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.15"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.128"
        app:layout_constraintWidth_percent="0.6" />

    <TextView
        android:id="@+id/title_text_third"
        android:layout_width="266dp"
        android:layout_height="92dp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeMinTextSize="10sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/app_name_sec"
        android:textColor="#FFFFFF"
        android:textFontWeight="800"
        android:textSize="50sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.12"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.285"
        app:layout_constraintWidth_percent="0.3" />

    <TextView
        android:id="@+id/loading_text"
        android:layout_width="368dp"
        android:layout_height="22dp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/loading_hint"
        android:textColor="@color/colorPureBlack"
        android:textFontWeight="800"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.833"
        app:layout_constraintWidth_percent="0.5" />

    <ProgressBar
        android:id="@+id/loading_progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="364dp"
        android:layout_height="37dp"
        android:max="100"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.895"
        app:layout_constraintWidth_percent="0.75" />

    <TextView
        android:id="@+id/loading_progress_text"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:autoSizeMaxTextSize="60sp"
        android:autoSizeMinTextSize="5sp"
        android:autoSizeTextType="uniform"
        android:fontFamily="@font/poppinsbold"
        android:gravity="center"
        android:maxLines="1"
        android:textColor="@color/colorPureBlack"
        android:textFontWeight="800"
        android:textSize="12sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.05"
        app:layout_constraintHorizontal_bias="0.495"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.917"
        app:layout_constraintWidth_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>